Fix Java 11 build